fixed the socials popup and disabled hover effect on mobile

--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -289,6 +289,10 @@ body {
     display: none;
 }
 
+.socials-clickme-text {
+    z-index: 999;
+}
+
 .socials-clickme::after {
     content: "";
     position: absolute;
@@ -307,10 +311,6 @@ body {
     bottom: 1vh;
     z-index: 999;
     cursor: pointer;
-}
-
-.socials:hover > .socials-clickme {
-    display: inline-block;
 }
 
 .socials-img {
@@ -424,6 +424,16 @@ body {
         font-size: 2.25rem;
         border: .25em solid;
     }
+    
+    .socials {
+        transform: translateX(-1vh);
+    }
+}
+
+@media only screen and (min-width: 1031px) and (max-width:2499px) {
+    .socials:hover > .socials-clickme {
+        display: inline-block;
+    }
 }
 
 @media only screen and (min-width: 2500px) {
@@ -436,5 +446,9 @@ body {
         height: 12rem;
         font-size: 4.5rem;
         border: .3em solid;
+    }
+
+    .socials:hover > .socials-clickme {
+        display: inline-block;
     }
 }
